nova funcionalidade tabela

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,12 @@
         "Adicionar",
         "aula",
         "Aulas",
+        "BOPE",
         "Cancelar",
         "carregar",
         "Categoria",
         "certeza",
+        "chegada",
         "Curso",
         "Cursos",
         "Deletando",
@@ -18,17 +20,32 @@
         "elemento",
         "Erro",
         "excedido",
+        "exercicio",
+        "Exercícios",
+        "Gerador",
+        "gerar",
+        "Idade",
+        "Inseridos",
+        "Inserir",
         "inválido",
         "loglevel",
+        "LOTAÇÃO",
         "máximo",
         "maxlength",
         "mínimo",
         "obrigatório",
+        "Ofício",
+        "origem",
+        "PERÍODOS",
         "precisa",
+        "recebido",
+        "Recibo",
         "removido",
+        "Saída",
         "Salvar",
         "Sucess",
         "sucesso",
+        "tabela",
         "Tamanho",
         "tentar"
     ],
